# teams-bot

./: .env.example  .gitignore  README.md  app.py  copilot-instructions.md  pyproject.toml
bots/: echo_bot.py
docs/: README.md
docs/adr/: 0001-track-agent-work-in-repo.md  0002-align-project-tracking-with-personal-preferences.md  README.md  adr-template.md
docs/agent-transcripts/: 2026-04-05.md  README.md
teams-app-manifest/: README.md  manifest.json
tests/: test_app.py
